--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   shared_preferences: ^2.3.3
   dio: ^5.7.0
   flutter_bloc: ^8.1.6
-  flutter_typeahead: ^5.2.0
+  dropdown_search: ^6.0.1
+  np_date_picker: ^6.0.0
 
 dev_dependencies:
   flutter_test:
