--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   dropdown_search: ^6.0.1
   np_date_picker: ^6.0.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
